--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -446,6 +446,9 @@ span.qc-ext-link-img {
 .pseudo-visited span.qc-ext-link-img {
   background: var(--qc-color-link-visited);
 }
+a:focus span.qc-ext-link-img {
+  background: var(--qc-color-link-focus);
+}
 .pseudo-hover span.qc-ext-link-img {
   background: var(--qc-color-link-hover);
 }
