--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -413,6 +413,9 @@ a .qc-external-link-tail img {
 a:visited a .qc-external-link-tail img {
   background: var(--qc-color-link-visited);
 }
+a:focus a .qc-external-link-tail img {
+  background: var(--qc-color-link-focus);
+}
 a:hover a .qc-external-link-tail img {
   background: var(--qc-color-link-hover);
 }
@@ -436,6 +439,9 @@ span.qc-ext-link-img {
 }
 a:visited span.qc-ext-link-img {
   background: var(--qc-color-link-visited);
+}
+a:focus span.qc-ext-link-img {
+  background: var(--qc-color-link-focus);
 }
 a:hover span.qc-ext-link-img {
   background: var(--qc-color-link-hover);
