--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -447,7 +447,7 @@ span.qc-ext-link-img {
   background: var(--qc-color-link-visited);
 }
 a:focus span.qc-ext-link-img {
-  background: var(--qc-color-link-focus);
+  background: var(--qc-color-link-hover);
 }
 .pseudo-hover span.qc-ext-link-img {
   background: var(--qc-color-link-hover);
