--- a/src/sdg/scss/lib/_mixins.scss
+++ b/src/sdg/scss/lib/_mixins.scss
@@ -70,6 +70,7 @@
   }
   a:focus  & {
     background: token-value(color link hover);
+    margin-right: 1px;
   }
   a:hover  & {
     background: token-value(color link hover);
