--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -437,6 +437,7 @@ a.pseudo-visited span.qc-ext-link-img {
 }
 a.pseudo-focus span.qc-ext-link-img {
   background: var(--qc-color-link-hover) !important;
+  margin-right: 1px;
 }
 a.pseudo-hover span.qc-ext-link-img {
   background: var(--qc-color-link-hover) !important;
