bandeau PIV - correction du style de l'image de recherche

--- a/src/sdg/scss/components/_pivHeader.scss
+++ b/src/sdg/scss/components/_pivHeader.scss
@@ -95,6 +95,7 @@ qc-piv-header {
 
     .qc-search {
       background-image: getImageUrl(loupe-piv-droite);
+      background-repeat: no-repeat;
       min-width: rem(24);
       height: rem(24);
       span {
