Separateur - ajout d'un mixin pour ajouter le style séparateur à l'api scss de la trousse

--- a/src/sdg/scss/components/_separator.scss
+++ b/src/sdg/scss/components/_separator.scss
@@ -1,7 +1,5 @@
 @use "qc-sdg-lib" as *;
 
 hr {
-  margin: token-value(spacer lg) 0;
-  border: 0;
-  border-bottom: 1px solid  token-value(color grey light);
+  @include ruler();
 }
