--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1541,7 +1541,7 @@ qc-piv-header a:focus-visible:has(img), qc-piv-header a:focus:has(img),
 }
 qc-piv-footer {
   margin-top: 4rem;
-  padding-bottom: 3.2rem;
+  padding-bottom: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1582,8 +1582,17 @@ qc-piv-footer a:hover {
 .qc-piv-footer a:hover {
   text-decoration: underline;
 }
+.qc-piv-footer .logo {
+  display: block;
+  width: calc(var(--logo-width) * 0.1rem);
+  height: calc(var(--logo-height) * 0.1rem);
+}
+.qc-piv-footer .logo img {
+  width: 100%;
+  height: 100%;
+}
 .qc-piv-footer .copyright {
-  margin-top: 3.2rem;
+  margin-top: 0.8rem;
 }
 
 .qc-general-alert {
