--- a/src/sdg/scss/components/_pivFooter.scss
+++ b/src/sdg/scss/components/_pivFooter.scss
@@ -1,4 +1,5 @@
 @use "qc-sdg-lib" as *;
+@use "sass:math";
 
 @mixin pivLinks() {
   a {
@@ -11,7 +12,7 @@
 
 qc-piv-footer {
   margin-top: rem(40);
-  padding-bottom: rem(4 * $base-spacer);
+  padding-bottom: rem(40);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,8 +48,17 @@ qc-piv-footer {
 
   @include pivLinks();
 
+  .logo {
+    display: block;
+    width: calc(var(--logo-width) * #{$rem-ratio}rem);
+    height: calc(var(--logo-height) * #{$rem-ratio}rem);
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
   .copyright {
-    margin-top: rem(32);
+    margin-top: rem(8);
   }
 
 }
