Ajout d'une reglage pour désactiver le thème sombre

--- a/src/sdg/scss/lib/_mixins.scss
+++ b/src/sdg/scss/lib/_mixins.scss
@@ -101,8 +101,10 @@
 }
 
 @mixin dark-theme() {
-  @at-root .qc-dark-theme #{&},:root.qc-dark-theme #{&} {
-     @content;
+  @if ($enable-dark-theme) {
+    @at-root .qc-dark-theme #{&},:root.qc-dark-theme #{&} {
+      @content;
+    }
   }
 }
 
