--- a/src/sdg/scss/settings/_base.scss
+++ b/src/sdg/scss/settings/_base.scss
@@ -1,5 +1,6 @@
 $percent-root-font-size: 62.5 !default; // so 1.6rem == 16px
 $img-dir: "../img";
+$enable-dark-theme: true !default;
 $base-spacer: 8 !default;
 // for local fonts, cf https://google-webfonts-helper.herokuapp.com/fonts
 $google-api-font: true !default;
